Fix card type selection spacing on mobile
Fix
- card types wrapping onto new row
- logos going outside boxes
- inconsistent radio buttons between iOS and Android

Bug: T176419

--- a/gateway_forms/mustache/forms.css
+++ b/gateway_forms/mustache/forms.css
@@ -478,7 +478,6 @@ div.error-box h2 {
     #cards li {
         position: relative;
         background: #fff;
-        margin-right: 2.5%;
         padding: 0;
         height: 96px;
         font-size: 13px;
@@ -486,11 +485,10 @@ div.error-box h2 {
     }
     #cards li input.cardradio {
         padding: 10px;
-        margin: 10px;
+        margin: 5px 0;
         display: block;
-        width: 100%;
+        width: auto;
         font-size: 13px;
-        box-sizing: border-box;
     }
     #cards li label {
         margin: 0;
